Fixes unnecessary animating of security text on tab change

Bug: 902280
Change-Id: I53e8152e1208a31bd4551c56da47489db92864af
Reviewed-on: https://chromium-review.googlesource.com/c/1329707
Commit-Queue: Jay Harris <harrisjay@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608611}
Former-commit-id: 1de1a5a6b2212b197f023bd89d1e33d3883797e2