components/omnibox/browser/test_location_bar_model.cc
@@ -52,7 +52,7 @@ const gfx::VectorIcon& TestLocationBarModel::GetVectorIcon() const {
 }
 
 base::string16 TestLocationBarModel::GetSecureDisplayText() const {
-  return base::string16();
+  return secure_display_text_;
 }
 
 base::string16 TestLocationBarModel::GetSecureAccessibilityText() const {
